added welcome message

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
                 </menu>
         </nav>
         </header>
+
+        <main>
+            <h1>Welcome to your Spoon-Saving Calander</h1>
+        </main>
     </body>
 
 </html>
