added login options

--- a/index.html
+++ b/index.html
@@ -18,6 +18,18 @@
 
         <main>
             <h1>Welcome to your Spoon-Saving Calander</h1>
+            <form>
+                <div>
+                    <span>Username: </span>
+                    <input type="text" placeholder="Enter Username Here" />
+                </div>
+                <div>
+                    <span>Password: </span>
+                    <input type="password" placeholder="Enter Password Here" />
+                </div>
+                <button type="submit">Login</button>
+                <button typy="submit">Create Account</button>
+            </form>
         </main>
     </body>
 
