added footer with Github link

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
                     <li><a href="analysis.html">Spoon Analysis</a></li>
                     <li><a href="about.html">About</a></li>
                 </menu>
-        </nav>
+            </nav>
+            <hr />
         </header>
 
         <main>
@@ -31,6 +32,13 @@
                 <button typy="submit">Create Account</button>
             </form>
         </main>
+
+        <footer>
+            <hr />
+            <span class="author">Website created by Packer Barlow</span>
+            <br />
+            <a href="https://github.com/packerb2/Introvert_Calander_Startup.git">My GitHub</a>
+        </footer>
     </body>
 
 </html>
