changed file name from index to home

--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
             <h1>Spoon Saver Calander</h1>
             <nav>
                 <menu>
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="home.html">Home</a></li>
                     <li><a href="calander.html">View Calander</a></li>
                     <li><a href="analysis.html">Spoon Analysis</a></li>
                     <li><a href="about.html">About</a></li>
