added note for myself on a new table to add

--- a/analysis.html
+++ b/analysis.html
@@ -46,6 +46,7 @@
                     </tr>
                 </tbody>
             </table>
+            <!--Add table for this weeks scores-->
             <p>
                 (For your own welbeing, please note that these scores are estimates at best and
                 that different people have different goals when it comes to spoon usage) 
