added new "this week" table

--- a/analysis.html
+++ b/analysis.html
@@ -25,6 +25,7 @@
             <p>A 1 indicating a lower level of spoon consumption</p>
             <p>A 5 indicates a higher level of spoon consumption</p>
             <table>
+                <ht1>At a Glance:</ht1>
                 <thead>
                     <th></th>
                     <th>Highest Day</th>
@@ -46,7 +47,33 @@
                     </tr>
                 </tbody>
             </table>
-            <!--Add table for this weeks scores-->
+
+            <p></p>
+
+            <table>
+                <ht1>This Week:</ht1>
+                <thead>
+                    <th>Sunday</th>
+                    <th>Monday</th>
+                    <th>Tuesday</th>
+                    <th>Wednesday</th>
+                    <th>Thursday</th>
+                    <th>Friday</th>
+                    <th>Saturday</th>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>5</td>
+                        <td>1</td>
+                        <td>3</td>
+                        <td>5</td>
+                        <td>1</td>
+                        <td>3</td>
+                        <td>5</td>
+                    </tr>
+                </tbody>
+            </table>
+
             <p>
                 (For your own welbeing, please note that these scores are estimates at best and
                 that different people have different goals when it comes to spoon usage) 
