--- a/calander.html
+++ b/calander.html
@@ -23,20 +23,20 @@
             <header>
                 <h2>Name's Calander</h2>
             </header>
-            <div class="friends">
-                You have events this week with:
+            <p>You have events this week with:</p>
+            <ul class="friends">
                 <li class="friend-name">Joe</li>
                 <li class="friend-name">Bob</li>
                 <li class="friend-name">Steven</li>
-            </div>
+            </ul>
             <p></p>
             <p>Notifications:</p>
-            <div class="notifications">
+            <ul class="notifications">
                 <li class="alert">Bob has invited you to an event: Barbeque</li>
                 <li class="alert">Bob has invited you to an event: Movie Night</li>
                 <li class="alert">Steven has canceled an event: Wedding</li>
                 <li class="alert">Joe has invited you to an event: Pool</li>
-            </div>
+            </ul>
         </main>
 
         <footer>
