added calander table headings and test button

--- a/calander.html
+++ b/calander.html
@@ -37,6 +37,27 @@
                 <li class="alert">Steven has canceled an event: Wedding</li>
                 <li class="alert">Joe has invited you to an event: Pool</li>
             </ul>
+
+            <div>
+                <table>
+                    <tr>
+                        <th>Sunday</th>
+                        <th>Monday</th>
+                        <th>Tuesday</th>
+                        <th>Wednesday</th>
+                        <th>Thursday</th>
+                        <th>Friday</th>
+                        <th>Saturday</th>
+                    </tr>
+                    <tr>
+                        <td>
+                            <button>
+                                <svg aria-hidden="true" viewBox="0 0 70 100" height="70" width="100"></svg>
+                            </button>
+                        </td>
+                    </tr>
+                </table>
+            </div>
         </main>
 
         <footer>
