--- a/calander.html
+++ b/calander.html
@@ -40,6 +40,11 @@
 
             <div>
                 <table>
+                    <div class="month">
+                        <header>
+                            <h3><span class="month-name">Decembruary</span></h3>
+                        </header>
+                    </div>
                     <tr>
                         <th>Sunday</th>
                         <th>Monday</th>
@@ -53,6 +58,9 @@
                         <td>
                             <button>
                                 <svg aria-hidden="true" viewBox="0 0 70 100" height="70" width="100"></svg>
+                                <span class="date">1</span>
+                                <br />
+                                <span class="Events">Number of Events: x</span>
                             </button>
                         </td>
                     </tr>
