formatted first week of calander

--- a/calander.html
+++ b/calander.html
@@ -57,8 +57,56 @@
                     <tr>
                         <td>
                             <button>
-                                <svg aria-hidden="true" viewBox="0 0 70 100" height="70" width="100"></svg>
+                                <svg aria-hidden="true" viewBox="0 0 100 100" height="50" width="70"></svg>
                                 <span class="date">1</span>
+                                <br />
+                                <span class="Events">Number of Events: x</span>
+                            </button>
+                        </td>
+                        <td>
+                            <button>
+                                <svg aria-hidden="true" viewBox="0 0 100 100" height="50" width="70"></svg>
+                                <span class="date">2</span>
+                                <br />
+                                <span class="Events">Number of Events: x</span>
+                            </button>
+                        </td>
+                        <td>
+                            <button>
+                                <svg aria-hidden="true" viewBox="0 0 100 100" height="50" width="70"></svg>
+                                <span class="date">3</span>
+                                <br />
+                                <span class="Events">Number of Events: x</span>
+                            </button>
+                        </td>
+                        <td>
+                            <button>
+                                <svg aria-hidden="true" viewBox="0 0 100 100" height="50" width="70"></svg>
+                                <span class="date">4</span>
+                                <br />
+                                <span class="Events">Number of Events: x</span>
+                            </button>
+                        </td>
+                        <td>
+                            <button>
+                                <svg aria-hidden="true" viewBox="0 0 100 100" height="50" width="70"></svg>
+                                <span class="date">5</span>
+                                <br />
+                                <span class="Events">Number of Events: x</span>
+                            </button>
+                        </td>
+                        <td>
+                            <button>
+                                <svg aria-hidden="true" viewBox="0 0 100 100" height="50" width="70"></svg>
+                                <span class="date">6</span>
+                                <br />
+                                <span class="Events">Number of Events: x</span>
+                            </button>
+                        </td>
+                        <td>
+                            <button>
+                                <svg aria-hidden="true" viewBox="0 0 100 100" height="50" width="70"></svg>
+                                <span class="date">7</span>
                                 <br />
                                 <span class="Events">Number of Events: x</span>
                             </button>
