organized event layout

--- a/calander.html
+++ b/calander.html
@@ -346,6 +346,19 @@
                     </tr>
                 </table>
             </div>
+
+            <ul class="selected-day">
+                <p class="event-name">Event 1:
+                    <li class="participants">Joe is coming</li>
+                    <li class="spoon-rating">Spoon score: x</li>
+                    <li>Select Spoons:</li>
+                    <button type="add-spoon">Long Distance</button>
+                    <button type="add-spoon">Large Gathering</button>
+                    <button type="add-spoon">Requires Packing</button>
+                    <button type="add-spoon">No Leaving Early</button>
+                    <button type="add-spoon">Hosting</button>
+                </p>
+            </ul>
         </main>
 
         <footer>
