--- a/home.html
+++ b/home.html
@@ -31,7 +31,7 @@
                     <input type="password" placeholder="Enter Password Here" />
                 </div>
                 <button type="submit">Login</button>
-                <button typy="submit">Create Account</button>
+                <button type="submit">Create Account</button>
             </form>
         </main>
 
