finished formatting event layout, added cancel buttons

--- a/calander.html
+++ b/calander.html
@@ -357,7 +357,23 @@
                     <button type="add-spoon">Requires Packing</button>
                     <button type="add-spoon">No Leaving Early</button>
                     <button type="add-spoon">Hosting</button>
+                    <li><button type="secret-cancel">Secretly wish everyone else cancels</button></li>
+                    <li><button type="cancel">Cancel Event</button></li>
                 </p>
+                <hr />
+                <p class="event-name">Event 2:
+                    <li class="participants">Joe is coming</li>
+                    <li class="spoon-rating">Spoon score: x</li>
+                    <li>Select Spoons:</li>
+                    <button type="add-spoon">Long Distance</button>
+                    <button type="add-spoon">Large Gathering</button>
+                    <button type="add-spoon">Requires Packing</button>
+                    <button type="add-spoon">No Leaving Early</button>
+                    <button type="add-spoon">Hosting</button>
+                    <li><button type="secret-cancel">Secretly wish everyone else cancels</button></li>
+                    <li><button type="cancel">Cancel Event</button></li>
+                </p>
+            <p></p>
             </ul>
         </main>
 
