--- a/calander.html
+++ b/calander.html
@@ -32,10 +32,10 @@
             <p></p>
             <p>Notifications:</p>
             <ul class="notifications">
-                <li class="alert">Bob has invited you to an event: Barbeque</li>
-                <li class="alert">Bob has invited you to an event: Movie Night</li>
-                <li class="alert">Steven has canceled an event: Wedding</li>
-                <li class="alert">Joe has invited you to an event: Pool</li>
+                <li class="new-alert">Bob has invited you to an event: Barbeque <button type="accept">Accept?</button></li>
+                <li class="new-alert">Bob has invited you to an event: Movie Night <button type="accept">Accept?</button></li>
+                <li class="cancel-alert">Steven has canceled an event: Wedding</li>
+                <li class="new-alert">Joe has invited you to an event: Pool <button type="accept">Accept?</button></li>
             </ul>
 
             <div>
