added placeholder image

--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
                 The goal of this calander is to help people to better visualize where their energy, or spoons, are being spent and to assist
                 in better managing their energy so that they can avoid burnout and focus on whatever is most important to them.
             </p>
-            <div id="picture" class="picture-box"><img src="placeholder.jpg" /></div>
+            <div id="picture" class="picture-box"><img width="400px" src="placeholder.png" /></div>
         </main>
 
         <footer>
