linked bootstrap, formatted css generally

--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
         <title>Spoon Saver Calander</title>
 
         <link rel="stylesheet" href="index.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
     </head>
-    <body>
+    <body class="bg-dark text-light">
         <header>
             <h1>Spoon Saver Calander</h1>
             <nav>
