formatted home button

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     />
     </head>
     <body class="bg-dark text-light">
-        <header>
-            <h1>Spoon Saver Calander</h1>
-            <nav>
+        <header class="container-fluid">
+            <nav class="nabbar fixed-top navbar-dark">
+                <a class="navbar-brand" href="#">Spoon Saver Calander</a>
                 <menu>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="calander.html">View Calander</a></li>
