--- a/index.html
+++ b/index.html
@@ -15,15 +15,23 @@
         <header class="container-fluid">
             <nav class="nabbar fixed-top navbar-dark">
                 <a class="navbar-brand" href="#">Spoon Saver Calander</a>
-                <menu>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="calander.html">View Calander</a></li>
-                    <li><a href="analysis.html">Spoon Analysis</a></li>
-                    <li><a href="about.html">About</a></li>
+                <menu class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="calander.html">View Calander</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="analysis.html">Spoon Analysis</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="about.html">About</a>
+                    </li>
                 </menu>
             </nav>
-            <hr />
         </header>
+        <hr />
 
         <main>
             <h1>Welcome to your Spoon-Saving Calander</h1>
