--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <body class="bg-dark text-light">
         <header class="container-fluid">
             <nav class="nabbar fixed-top navbar-dark">
-                <a class="navbar-brand" href="#">Spoon Saver Calander</a>
+                <font size="6"><a class="navbar-brand" href="#">Spoon Saver Calander</a></font>
                 <menu class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link active" href="index.html">Home</a>
