--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
                 </menu>
             </nav>
         </header>
-        <hr />
 
         <main>
             <h1>Welcome to your Spoon-Saving Calander</h1>
@@ -49,11 +48,12 @@
             </form>
         </main>
 
-        <footer>
-            <hr />
-            <span class="author">Website created by Packer Barlow</span>
-            <br />
-            <a href="https://github.com/packerb2/Introvert_Calander_Startup.git">My GitHub</a>
+        <footer class="bg-dark text-white-50">
+            <div class="container-fluid">
+                <hr />
+                <span class="text-rest">Website created by Packer Barlow</span>
+                <a class="text-reset" href="https://github.com/packerb2/Introvert_Calander_Startup.git">My GitHub</a>
+                </div>
         </footer>
     </body>
 
