formatted main body of home page

--- a/index.html
+++ b/index.html
@@ -32,20 +32,25 @@
             </nav>
         </header>
 
-        <main>
-            <h1>Welcome to your Spoon-Saving Calander</h1>
-            <form>
-                <div>
-                    <span>Username: </span>
-                    <input type="text" placeholder="Enter Username Here" />
-                </div>
-                <div>
-                    <span>Password: </span>
-                    <input type="password" placeholder="Enter Password Here" />
-                </div>
-                <button type="submit">Login</button>
-                <button type="submit">Create Account</button>
-            </form>
+        <main class="container-fluid text-center">
+            <div>
+                <h1>Welcome to your</h1>
+                <h2>
+                    <font size="7">Spoon-Saving Calander</font>
+                </h2>
+                <form method="get" action="calander.html">
+                    <div class="input-group mb-3">
+                        <span class="input-group-text">Username: </span>
+                        <input class="form-control" type="text" placeholder="Enter Username Here" />
+                    </div>
+                    <div class="input-group mb-3">
+                        <span class="input-group-text">Password: </span>
+                        <input class="form-control" type="password" placeholder="Enter Password Here" />
+                    </div>
+                    <button type="submit" class="btn btn-primary">Login</button>
+                    <button type="submit" class="btn btn-secondary">Create Account</button>
+                </form>
+            </div>
         </main>
 
         <footer class="bg-dark text-white-50">
