--- a/calander.html
+++ b/calander.html
@@ -33,20 +33,22 @@
         </header>
 
         <main>
-            <p></p>
-            <p>You have events this week with:</p>
-            <ul class="friends">
-                <li class="friend-name">Joe</li>
-                <li class="friend-name">Bob</li>
-                <li class="friend-name">Steven</li>
+            <div>
+                <p></p>
+                <p>You have events this week with:</p>
+                <ul class="friends">
+                    <li class="friend-name">Joe</li>
+                    <li class="friend-name">Bob</li>
+                    <li class="friend-name">Steven</li>
+            </div>
             </ul>
             <p></p>
             <p>Notifications:</p>
             <ul class="notifications">
-                <li class="new-alert">Bob has invited you to an event: Barbeque <button type="accept">Accept?</button><button type="accept">Reject?</button></li>
-                <li class="new-alert">Bob has invited you to an event: Movie Night <button type="accept">Accept?</button><button type="accept">Reject?</button></li>
-                <li class="cancel-alert">Steven has canceled an event: Wedding</li>
-                <li class="new-alert">Joe has invited you to an event: Pool <button type="accept">Accept?</button><button type="accept">Reject?</button></li>
+                <li class="new-alert">Bob has invited you to an event: Barbeque <button class="accept">Accept</button> <button class="reject">Reject</button></li>
+                <li class="new-alert">Bob has invited you to an event: Movie Night <button class="accept">Accept</button> <button class="reject">Reject</button></li>
+                <li class="new-alert">Steven has canceled an event: Wedding <button class="dismiss">Dismiss</button></li>
+                <li class="new-alert">Joe has invited you to an event: Pool <button class="accept">Accept</button> <button class="reject">Reject</button></li>
             </ul>
 
             <div>
