formatted event buttons

--- a/calander.html
+++ b/calander.html
@@ -365,24 +365,24 @@
                     <li class="participants">Joe is coming</li>
                     <li class="spoon-rating">Spoon score: x</li>
                     <li>Select Spoons:</li>
-                    <button type="add-spoon">Long Distance</button>
-                    <button type="add-spoon">Large Gathering</button>
-                    <button type="add-spoon">Requires Packing</button>
-                    <button type="add-spoon">No Leaving Early</button>
-                    <button type="add-spoon">Hosting</button>
-                    <li><button type="secret-cancel">Secretly wish everyone else cancels</button><button type="cancel">Cancel Event</button></li>
+                    <button class="addspoon">Long Distance</button>
+                    <button class="addspoon">Large Gathering</button>
+                    <button class="addspoon">Requires Packing</button>
+                    <button class="addspoon">No Leaving Early</button>
+                    <button class="addspoon">Hosting</button>
+                    <li><button class="soft">Secretly wish everyone else cancels</button> <button class="cancel">Cancel Event</button></li>
                 </p>
                 <hr />
                 <p class="event-name">Event 2:
                     <li class="participants">Joe is coming</li>
                     <li class="spoon-rating">Spoon score: x</li>
                     <li>Select Spoons:</li>
-                    <button type="add-spoon">Long Distance</button>
-                    <button type="add-spoon">Large Gathering</button>
-                    <button type="add-spoon">Requires Packing</button>
-                    <button type="add-spoon">No Leaving Early</button>
-                    <button type="add-spoon">Hosting</button>
-                    <li><button type="secret-cancel">Secretly wish everyone else cancels</button><button type="cancel">Cancel Event</button></li>
+                    <button class="addspoon">Long Distance</button>
+                    <button class="addspoon">Large Gathering</button>
+                    <button class="addspoon">Requires Packing</button>
+                    <button class="addspoon">No Leaving Early</button>
+                    <button class="addspoon">Hosting</button>
+                    <li><button class="soft">Secretly wish everyone else cancels</button> <button class="cancel">Cancel Event</button></li>
                 </p>
             <p></p>
             </ul>
