--- a/calander.html
+++ b/calander.html
@@ -363,26 +363,26 @@
             <ul class="selected-day">
                 <p class="event-name">Event 1:
                     <li class="participants">Joe is coming</li>
-                    <li class="spoon-rating">Spoon score: x</li>
                     <li>Select Spoons:</li>
                     <button class="addspoon">Long Distance</button>
                     <button class="addspoon">Large Gathering</button>
                     <button class="addspoon">Requires Packing</button>
                     <button class="addspoon">No Leaving Early</button>
                     <button class="addspoon">Hosting</button>
-                    <li><button class="soft">Secretly wish everyone else cancels</button> <button class="cancel">Cancel Event</button></li>
+                    <li class="spoon-rating">Spoon score: x</li>
+                    <li><button class="soft">Hope for Cancel</button> <button class="cancel">Cancel Event</button></li>
                 </p>
                 <hr />
                 <p class="event-name">Event 2:
                     <li class="participants">Joe is coming</li>
-                    <li class="spoon-rating">Spoon score: x</li>
                     <li>Select Spoons:</li>
                     <button class="addspoon">Long Distance</button>
                     <button class="addspoon">Large Gathering</button>
                     <button class="addspoon">Requires Packing</button>
                     <button class="addspoon">No Leaving Early</button>
                     <button class="addspoon">Hosting</button>
-                    <li><button class="soft">Secretly wish everyone else cancels</button> <button class="cancel">Cancel Event</button></li>
+                    <li class="spoon-rating">Spoon score: x</li>
+                    <li><button class="soft">Hope for Cancel</button> <button class="cancel">Cancel Event</button></li>
                 </p>
             <p></p>
             </ul>
