organized top of calander page

--- a/calander.html
+++ b/calander.html
@@ -33,23 +33,26 @@
         </header>
 
         <main>
-            <div>
-                <p></p>
-                <p>You have events this week with:</p>
-                <ul class="friends">
-                    <li class="friend-name">Joe</li>
-                    <li class="friend-name">Bob</li>
-                    <li class="friend-name">Steven</li>
+            <div class="calandertop">
+                <li><button class="newevent">Create New Event</button></li>
+                <li>
+                    <ul class="notifications">
+                        <p>Notifications:</p>
+                        <li class="new-alert">Bob has invited you to an event: Barbeque
+                            <li><button class="accept">Accept</button> <button class="reject">Reject</button></li>
+                        </li>
+                        <li class="new-alert">Bob has invited you to an event: Movie Night
+                            <li><button class="accept">Accept</button> <button class="reject">Reject</button></li>
+                        </li>
+                        <li class="new-alert">Steven has canceled an event: Wedding
+                            <li><button class="dismiss">Dismiss</button></li>
+                        </li>
+                        <li class="new-alert">Joe has invited you to an event: Pool
+                            <li><button class="accept">Accept</button> <button class="reject">Reject</button></li>
+                        </li>
+                    </ul>
+                </li>
             </div>
-            </ul>
-            <p></p>
-            <p>Notifications:</p>
-            <ul class="notifications">
-                <li class="new-alert">Bob has invited you to an event: Barbeque <button class="accept">Accept</button> <button class="reject">Reject</button></li>
-                <li class="new-alert">Bob has invited you to an event: Movie Night <button class="accept">Accept</button> <button class="reject">Reject</button></li>
-                <li class="new-alert">Steven has canceled an event: Wedding <button class="dismiss">Dismiss</button></li>
-                <li class="new-alert">Joe has invited you to an event: Pool <button class="accept">Accept</button> <button class="reject">Reject</button></li>
-            </ul>
 
             <div>
                 <table>
